# SmartRing-Plus

./: README.md  README_CN.md
datasheet/: UE018HV-RB39-A004A-initial-code_V1.0.INI
examples/arduino/simple_port/: esp_panel_board_supported_conf.h
examples/esp-idf/smartring_plus_lvgl_port/: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
examples/esp-idf/smartring_plus_lvgl_port/.cache/clangd/index/: InvError.h.82BB81A9A917BD46.idx  animimg001.c.F15586FA28E37669.idx  animimg002.c.80F446638212A674.idx  animimg003.c.50425ACE796EF967.idx  bsp_err_check.h.6D932009C014AA1B.idx  cmd_resp.c.8758A150EA2BBF56.idx  create_APN3_PPI_string.c.E846C5314DC065FA.idx  display.h.9B4632A65823E17D.idx  esp-mqtt-glue.c.89DC60EB35F977D4.idx  esp_lcd_st77916.c.EADEDABB23F9F6E0.idx  esp_lcd_st77916.h.481DDCE89D5EE137.idx  esp_lcd_touch.c.E6A9855575376FBB.idx  esp_lcd_touch.h.1ADDB2C0F4893356.idx  (+608 more)
examples/esp-idf/smartring_plus_lvgl_port/components/espressif__esp_lcd_touch_cst816s/: esp_lcd_touch_cst816s.c
examples/esp-idf/smartring_plus_lvgl_port/components/espressif__icm42670/: CMakeLists.txt
examples/esp-idf/smartring_plus_lvgl_port/components/smartring_plus/: CMakeLists.txt  Kconfig  idf_component.yml  smartring_plus.c
examples/esp-idf/smartring_plus_lvgl_port/main/: CMakeLists.txt  idf_component.yml  main.c
libraries/ESP32_Display_Panel/src/board/: esp_panel_board_default_config.cpp
libraries/ESP32_Display_Panel/src/board/supported/: esp_panel_board_config_supported.h  esp_panel_board_kconfig_supported.h
(+15 files in other folders)
